--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ Temporary Items
 
 ## User settings
 xcuserdata/
+Gourmetus.xcodeproj/xcuserdata
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
